# mackinac-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml
codegen/: generate.py
examples/: amm_fee_table.py  funding_carry.py  historical_quotes.py  historical_trades.py  lending_rates_async.py  lending_rates_sync.py  liquidation_watch_async.py  liquidation_watch_sync.py  live_trades.py  multi_venue_basis.py  quotes_and_trades.py  rate_table.py  reconnect_pattern.py  subscribe_quotes.py  yield_rates.py
mackinac/: __init__.py  _config.py  _ws.py  client.py  exceptions.py  symbols.py  sync.py
mackinac/models/: __init__.py  messages.py  rest.py
tests/: test_live.py  test_models.py  test_reconnect.py  test_symbols.py  test_sync.py
