[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mackinac-client"
version = "0.2.0"
description = "Python client for the Mackinac market-data API — live quotes, trades, funding, and yield rates across 13 DeFi venues"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "mackinac" }]
keywords = [
    "hyperliquid", "uniswap", "pendle", "defi", "websocket",
    "market-data", "crypto", "amm", "perpetuals", "yield",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
wallet  = ["eth-account>=0.12"]
tables  = ["pandas>=2.0"]
dev     = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "datamodel-code-generator>=0.25",
    "pandas>=2.0",
]

[project.urls]
Homepage  = "https://github.com/mackinac/mackinac-python"
Docs      = "https://docs.mackinac.io"
Changelog = "https://github.com/mackinac/mackinac-python/CHANGELOG.md"
Issues    = "https://github.com/mackinac/mackinac-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["mackinac"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: integration tests that require a live Mackinac server (run with -m live)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
